[tool.poetry]
name = "typogrify"
version = "2.0.7"
description = "Filters to enhance web typography, including support for Django & Jinja templates"
authors = [ "Christian Metts <chris@tiltshiftstudio.com>",
            "Justin Mayer <entroP@gmail.com>",
            "Chris Drackett",]
license = "BSD"
homepage="https://github.com/mintchaos/typogrify"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Framework :: Django",
    "Framework :: Flask",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"
smartypants = ">=1.8.3"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
invoke = ">=1.3.0"
pycodestyle = ">=2.6.0"
pytest = ">5.0.0"

[tool.black]
exclude = 'tests\.py'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
